--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,6 @@ Django>=5.0.0
 Pillow>=10.0.0
 django-allauth>=0.65.0
 cryptography>=45.0.0
-oauthlib>=3.3.0 
+oauthlib>=3.3.0
+cloudinary>=1.36.0
+django-cloudinary-storage>=0.3.0 
