--- a/.gitignore
+++ b/.gitignore
@@ -128,24 +128,9 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
-# Django
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
-
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-
-# OS
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db 
+# Environment variables
+.env
+.env.local
+.env.development
+.env.test
+.env.production 
