--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,5 @@ django-allauth>=0.65.0
 cryptography>=45.0.0
 oauthlib>=3.3.0
 cloudinary>=1.36.0
-django-cloudinary-storage>=0.3.0 
+django-cloudinary-storage>=0.3.0
+python-dotenv>=1.0.0 
