--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,8 @@ EMAIL_PORT=587
 EMAIL_USE_TLS=True
 EMAIL_HOST_USER=your-email@gmail.com
 EMAIL_HOST_PASSWORD=your-app-password
+DEFAULT_FROM_EMAIL=noreply@expertconnect.com
+SERVER_EMAIL=server@expertconnect.com
 
 # Social Authentication Settings
 GOOGLE_CLIENT_ID=your-google-client-id
