--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,9 @@ EMAIL_HOST_PASSWORD=your-app-password
 DEFAULT_FROM_EMAIL=noreply@expertconnect.com
 SERVER_EMAIL=server@expertconnect.com
 
+# Admin email for notifications
+ADMIN_EMAIL=admin@expertconnect.com
+
 # Social Authentication Settings
 GOOGLE_CLIENT_ID=your-google-client-id
 GOOGLE_CLIENT_SECRET=your-google-client-secret
